--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,8 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ main, gh-pages ]
+    branches:
+      - main
 
 jobs:
   deploy:
@@ -23,10 +24,7 @@ jobs:
       
     - name: Build and Deploy
       uses: peaceiris/actions-gh-pages@v3
-      env:
-        API_KEY: ${{ secrets.API_KEY }}
-        API_URL: ${{ secrets.API_URL }}
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: .
+        publish_dir: ./public
         publish_branch: gh-pages
