--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "cors": "^2.8.5"
+    "express": "^4.17.1"
   },
   "engines": {
     "node": ">=12.0.0"
