Your commit message

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,9 @@
-# Node
+# Environment variables
+.env
+
+# Node modules
 node_modules/
-package-lock.json
 
-# Python
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-.Python
-*.log
-
-# IDE
-.vscode/
-.idea/
-
-# Project specific
-video/logs/
-video/start_tool.bat
-
-.DS_Store
+# Build files
+dist/
+build/
